--- a/src/Raven.Studio/wwwroot/Content/css/styles.less
+++ b/src/Raven.Studio/wwwroot/Content/css/styles.less
@@ -1842,6 +1842,7 @@ ul.properties {
 @import "pages/debug-advanced.less";
 @import "pages/metrics.less";
 @import "pages/export-progress.less";
+@import "pages/sql-migration-progress.less";
 @import "pages/compaction-progress.less";
 @import "pages/stats.less";
 @import "pages/revisions.less";
