--- a/src/Raven.Studio/wwwroot/Content/css/pages/sql-migration.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/sql-migration.less
@@ -2,6 +2,10 @@
 
 .sql-migration {
     
+    .left-ident {
+        padding-left: 30px;
+    }
+    
     .object-container [class^="icon-"] + span {
         margin-left: 0;
     }
@@ -155,5 +159,17 @@
             
             cursor: pointer;
         }
+    }
+    
+    .settings-menu {
+        .flex-form {
+            .control-label {
+                width: 255px;
+            }    
+        }
+    }
+    
+    .dropdown .dropdown-menu.settings-menu {
+        width: 470px;
     }
 }
