--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/importDatabaseFromSql.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/importDatabaseFromSql.html
@@ -69,10 +69,22 @@
                         </div>
                         <div class="form-group" data-bind="validationElement: sourceDatabaseName">
                             <label class="control-label">SQL Database name<i class="required"></i></label>
-                            <div class="flex-grow">
-                                <input class="form-control"
-                                       data-bind="textInput: sourceDatabaseName"
+                            <div class="dropdown btn-block flex-grow"  data-bind="validationOptions: { insertMessages: false }">
+                                <input class="form-control" autocomplete="off" id="sqlDatabaseName"
+                                       data-bind="textInput: sourceDatabaseName, hasFocus: $root.sourceDatabaseFocus"
                                        placeholder="Enter the SQL Database name">
+                                <span class="caret dropdown-toggle" data-toggle="dropdown"></span>
+                                <ul class="dropdown-menu max-height" role="menu" style="display: none;"
+                                    data-bind="autoComplete: '#sqlDatabaseName', foreach: $root.createDbAutocompleter(sourceDatabaseName)">
+                                    <li role="presentation" data-bind="click: $parent.sourceDatabaseName.bind($parent, $data)">
+                                        <a role="menuitem" tabindex="-1" href="#">
+                                            <span data-bind="text: $data"></span>
+                                        </a>
+                                    </li>
+                                </ul>
+                                <div data-bind="validationOptions: { errorsAsTitle: false }, validationElement: sourceDatabaseName">
+                                    <div class="help-block" data-bind="validationMessage: sourceDatabaseName"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
