--- a/src/Raven.Studio/wwwroot/Content/css/pages/sql-migration.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/sql-migration.less
@@ -173,3 +173,11 @@
         width: 470px;
     }
 }
+
+
+.reference-in-use-modal {
+    .max-height {
+        max-height: 80vh;
+        overflow: auto;
+    }
+}
