--- a/src/Raven.Studio/wwwroot/App/views/database/tasks/importDatabaseFromSql.html
+++ b/src/Raven.Studio/wwwroot/App/views/database/tasks/importDatabaseFromSql.html
@@ -87,6 +87,32 @@
                                 </div>
                             </div>
                         </div>
+                        
+                        <div data-bind="collapse: $root.showAdvancedOptions">
+                            <hr />
+                            <h3>Advanced options</h3>
+                            <div class="form-group">
+                                <label class="control-label">&nbsp;</label>
+                                <div class="toggle">
+                                    <input id="pascalCase" type="checkbox" data-bind="checked: advanced.usePascalCase">
+                                    <label for="pascalCase">Convert property names to <strong>PascalCase</strong></label>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label">&nbsp;</label>
+                                <div class="toggle">
+                                    <input id="removeId" type="checkbox" data-bind="checked: advanced.trimUnderscoreId">
+                                    <label for="removeId">Trim <strong>_id</strong> from property names</label>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label">&nbsp;</label>
+                                <div class="toggle">
+                                    <input id="manyToMany" type="checkbox" data-bind="checked: advanced.usePascalCase">
+                                    <label for="manyToMany">Detect <strong>many-to-many</strong> relationships</label>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <hr/>
@@ -96,6 +122,9 @@
                 <hr/>
                 <div class="form-group">
                     <div class="col-sm-10">
+                        <button class="btn btn-default" type="button" data-bind="click: $root.showAdvancedOptions.toggle.bind($root.showAdvancedOptions)">
+                            Advanced
+                        </button>
                         <button class="btn btn-primary" type="submit" 
                                 data-bind="disable: $root.spinners.schema, css: { 'btn-spinner': $root.spinners.schema }">
                             <span class="icon-import"></span> <span>Continue</span>
