--- a/src/Raven.Studio/wwwroot/Content/css/pages/sql-migration.less
+++ b/src/Raven.Studio/wwwroot/Content/css/pages/sql-migration.less
@@ -2,7 +2,11 @@
 
 .sql-migration {
     
-    .left-ident {
+    
+    .filter-input {
+        margin-left: @grid-gutter-width/4;
+    }
+    .left-indent {
         padding-left: 30px;
     }
     
